--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /vendor/
 assets/picture
 
+application/config/database.php
+
 # IDE Files
 #-------------------------
 /nbproject/
